--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	</head>
 	<body>
 		<ul>
-		   <li><a href="01hello.php">01hello.php</a></li>
-		   <li><a href="02testinghtml.php">02testinghtml.php</a></li>
+		   <li><a href="/01hello.php">01hello.php</a></li>
+		   <li><a href="/02testinghtml.php">02testinghtml.php</a></li>
 		   <li><a href="03variable.php">03variable.php</a></li>
 		   <li><a href="04datatype.php">04datatype.php</a></li>
 		   <li><a href="05string.php">05string.php</a></li>
